clusters/sirius/apps/kokoro/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kokoro
  labels:
    app: kokoro
spec:
  type: ClusterIP
  ports:
  - name: kokoro-tts
    port: 8880
    targetPort: 8880
    protocol: TCP
  - name: epub-to-audiobook
    port: 7860
    targetPort: 7860
    protocol: TCP
  selector:
    app: kokoro
