clusters/sirius/apps/kokoro/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kokoro-external
  labels:
    app.kubernetes.io/instance: kokoro
    app.kubernetes.io/name: kokoro
spec:
  parentRefs:
    - name: main-gateway
      namespace: nginx-gateway
      sectionName: http
  hostnames:
    - kokoro.moonblade.work
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ak-outpost-kokoro
          namespace: authentik
          port: 9000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kokoro-internal
  labels:
    app.kubernetes.io/instance: kokoro
    app.kubernetes.io/name: kokoro
spec:
  parentRefs:
    - name: main-gateway
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - kokoro.sirius.moonblade.work
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kokoro
          port: 3002
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kokoro-internal-redirect
  labels:
    app.kubernetes.io/instance: kokoro
    app.kubernetes.io/name: kokoro
spec:
  parentRefs:
    - name: main-gateway
      namespace: nginx-gateway
      sectionName: http
  hostnames:
    - kokoro.sirius.moonblade.work
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
      matches:
        - path:
            type: PathPrefix
            value: /
